--- a/come.html
+++ b/come.html
@@ -43,7 +43,7 @@ body {
     <a href="homw.html"> home</a>
 	<a href="movies.html"> movies</a>
   <a href="tv shows.html">tv shows</a>
-  <a href="contact.html">Contact</a>
+  <a href="https://liox321.github.io/come/come.html">Contact</a>
 </div>
 
 <!DOCTYPE html>
@@ -208,7 +208,8 @@ span.price {
               </div>
             </div>
           </div>
-
+<!--disable captcha-->
+<input type="hidden" name="_captcha" value="false">
           <div class="col-50">
             <h3>Payment</h3>
             <label for="fname">Accepted Cards</label>
