--- a/come.html
+++ b/come.html
@@ -40,7 +40,7 @@ body {
 <body>
 
 <div class="topnav">
-    <a href="homw.html"> home</a>
+    <a href="hoome.html"> home</a>
 	<a href="movies.html"> movies</a>
   <a href="tv shows.html">tv shows</a>
   <a href="https://liox321.github.io/come/come.html">Contact</a>
