--- a/come.html
+++ b/come.html
@@ -3,10 +3,19 @@
 <html lang="en">
      <head>
 	        <meta charset="UTF-8">
+			<TITLE>
+			smovies
+			</title>
 			<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<body background="images/movie and tv show.jpg">
+
+
+
+
 <style>
-body {
+
+body {                                                                                   
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -40,14 +49,11 @@ body {
 <body>
 
 <div class="topnav">
-    <a href="hoome.html"> home</a>
+    <a href="homw.html"> home</a>
 	<a href="movies.html"> movies</a>
   <a href="tv shows.html">tv shows</a>
-  <a href="https://liox321.github.io/come/come.html">Contact</a>
+  <a href="https://liox321.github.io/come/come.html.html">Contact</a>
 </div>
-
-<!DOCTYPE html>
-<html>
 <body>
 
 <h2>contact me:</h2>
@@ -66,8 +72,6 @@ Comment:<br>
 
 </body>
 </html>
-<!DOCTYPE html>
-<html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -263,5 +267,3 @@ span.price {
 
 </body>
 </html>
-
-			
